--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -8,32 +8,53 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/style1.css">
-
     <title>Aditya's Personal Site</title>
     <link rel="icon" href="/img/detective.png">
   </head>
   <section class="container"></section>
+
+  <!--
+<script type="text/javascript">
+  window.addEventListener("scroll", function(){
+     var header = document.querySelector("header");
+     header.classList.toggle("scrolling-active");
+    })
+</script>
+-->
+
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
+
+    <div class="container" id="navbar">
       <a class="navbar-brand" href="/index.html">H🔍ME</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <div class="collapse navbar-collapse justify-content-left" id="navbar">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#week1">Week 1</a>
+          <li>
+            <div class="dropdown">
+              <button class="dropbtn">January</button>
+              <div class="dropdown-content">
+                <a href="#week1">Week 1</a> 
+                <a href="#week2">Week 2</a>
+                <a href="#week3">Week 3</a>
+                <a href="#week4">Week 4</a>
+              </div>
+            </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#week2">Week 2</a>
+          <!--
+          <li>
+            <div class="dropdown">
+              <button class="dropbtn">February</button>
+              <div class="dropdown-content">
+                <a href="#week5">Week 5</a>
+                <a href="#week6">Link 6</a>
+                <a href="#week7">Link 7</a>
+              </div>
+            </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#week3">Week 3</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#week4">Week 4</a>
-          </li>
+          -->
         </ul>
       </div>
     </div>
@@ -42,8 +63,7 @@
   <center>
     <div class="container text-white">
       <div class="des">
-        <img src="/img/pyrus.jpg" class="img-fluid round"> <br><br>
-        <h1>Daily</h1> <br><br>
+        <br><br><br>
         <h1 id="tryhackme" style="color:DodgerBlue">Daily Hacking Challenge</h1><br>
         <hr>
         <h2 id="week1">Week 1</h2> <br><br><br>
@@ -693,6 +713,24 @@
             <a href="https://hcibo.medium.com/my-pentest-log-4-82286fe42994" target="_blank">My Pentest Log -4-</a> : Hamit CİBO <br><br>
             <a href="https://securitygoat.medium.com/data-exfiltration-with-some-fun-xss-tricks-49e9251f05fd" target="_blank">Data Exfiltration with some FUN XSS Tricks</a> : SecurityGOAT <br><br>
             <a href="https://medium.com/@janerowashington/how-to-hack-a-web-app-mini-series-part-1-footprinting-a-web-infrastructure-c67e062974e1" target="_blank">How to hack a Web App {mini-series} Part 1: Footprinting a web infrastructure</a> : Janero Washington <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 27: Jan 27 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://infosecwriteups.com/how-i-was-able-to-takeover-accounts-in-websites-deal-with-github-as-a-sso-provider-294290358e0c" target="_blank">How I was able to take over accounts in websites deal with Github as an SSO provider</a> : Khaled Mohamed <br><br>
+            <a href="https://medium.com/@moSec/how-i-hacked-thousand-of-subdomains-6aa43b92282c" target="_blank">HOW I hacked thousand of subdomains</a> : MoSec <br><br>
+            <a href="https://aidilarf.medium.com/first-valid-bug-finding-at-microsoft-and-i-got-the-acknowledgments-page-microsoft-a2c185c53074" target="_blank">First Valid BUG Finding At Microsoft And I Got the Acknowledgments Page Microsoft</a> : Aidil Arief <br><br>
+            <a href="https://infosecwriteups.com/a-tale-of-5250-how-i-accessed-millions-of-users-data-including-their-national-id-s-fd48ca7ca0bf" target="_blank">A TALE OF 5250$: HOW I ACCESSED MILLIONS OF USER’S DATA INCLUDING THEIR ADDRESS AND PERSONAL INFO</a> : Sam <br><br>
+            <a href="https://nmochea.medium.com/xiaomi-arbitrary-javascript-vulnerability-327a6f3a9b0e" target="_blank">Xiaomi Execute Arbitrary JavaScript</a> : Neilmark Ochea <br><br>
           </p>
         <br><br>
       </p>
