--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -721,7 +721,8 @@
       <p>
         <h5>My Activities</h5>
           <p>
-
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Keldagrim</a> : Offensive Security Proving Grounds (Play) <br><br>
+            <a href="https://tryhackme.com/room/keldagrim" target="_blank">Keldagrim</a> : TryHackMe <br><br>
           </p>
         <br><br> 
         <h5>Blogs Reads</h5>
