--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -723,6 +723,7 @@
           <p>
             <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Keldagrim</a> : Offensive Security Proving Grounds (Play) <br><br>
             <a href="https://tryhackme.com/room/keldagrim" target="_blank">Keldagrim</a> : TryHackMe <br><br>
+            CCDC Meeting <br><br>
           </p>
         <br><br> 
         <h5>Blogs Reads</h5>
@@ -732,6 +733,29 @@
             <a href="https://aidilarf.medium.com/first-valid-bug-finding-at-microsoft-and-i-got-the-acknowledgments-page-microsoft-a2c185c53074" target="_blank">First Valid BUG Finding At Microsoft And I Got the Acknowledgments Page Microsoft</a> : Aidil Arief <br><br>
             <a href="https://infosecwriteups.com/a-tale-of-5250-how-i-accessed-millions-of-users-data-including-their-national-id-s-fd48ca7ca0bf" target="_blank">A TALE OF 5250$: HOW I ACCESSED MILLIONS OF USER’S DATA INCLUDING THEIR ADDRESS AND PERSONAL INFO</a> : Sam <br><br>
             <a href="https://nmochea.medium.com/xiaomi-arbitrary-javascript-vulnerability-327a6f3a9b0e" target="_blank">Xiaomi Execute Arbitrary JavaScript</a> : Neilmark Ochea <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 28: Jan 28 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://www.udemy.com/course/security-601-exams/" target="_blank">Security+</a> : Jason Dion <br><br> 
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Assertion101</a> : Offensive Security Proving Grounds (Play) <br><br>
+            <a href="https://tryhackme.com/room/goldeneye" target="_blank">GoldenEye</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/powershellforpentesters" target="_blank">PowerShell for Pentesters</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/machines/373" target="_blank">Previse</a> : HackTheBox <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://infosecwriteups.com/how-i-was-able-to-find-multiple-vulnerabilities-of-a-symfony-web-framework-web-application-2b82cd5de144" target="_blank">How I was able to find multiple vulnerabilities of a Symfony Web Framework web application</a> : Abid Ahmad <br><br>
+            <a href="https://medium.com/@turkishhoodie010/types-of-network-security-tools-1ae9acff7951" target="_blank">Types of Network Security Tools</a> : Ahmet Göker <br><br>
+            <a href="https://medium.com/@shayhershko20/vulnhub-xss-and-mysql-file-walkthrough-f54dbfe77769" target="_blank">Vulnhub: XSS AND MYSQL FILE (Walkthrough)</a> : Shay her <br><br>
+            <a href="https://medium.com/@arunnagath/my-way-to-recon-strategy-23fba496bf7" target="_blank">My way to Recon strategy</a> : Arun Nagath <br><br>
+            <a href="https://infosecwriteups.com/day-9-cn-network-security-devices-100daysofhacking-b856b5ab092d" target="_blank">Day 9 CN- Network Security Devices #100DaysofHacking</a> : Ayush Verma <br><br>
+            <a href="https://infosecwriteups.com/day-10-all-about-dns-100daysofhacking-a337b8e763a" target="_blank">Day 10: All About DNS #100DaysofHacking</a> : Ayush Verma <br><br>
           </p>
         <br><br>
       </p>
