--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -760,6 +760,26 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 29: Jan 29 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/chronicle" target="_blank">Chronicle</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/cicada3301vol1" target="_blank">Cicada-3301 Vol:1</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/machines/Granny" target="_blank">Granny</a> : HackTheBox <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://infosecwriteups.com/day-16-web-reconnaissance-or-information-gathering-part-1-100daysofhacking-43d0c723611c" target="_blank">Day 16, Web Reconnaissance Or Information Gathering — Part 1#100DaysofHacking</a> : Ayush Verma <br><br>
+            <a href="https://medium.com/ax1al/exploring-ghidra-with-baby-elf-29c986e80a45" target="_blank">Exploring Ghidra with Baby ELF</a> : Ax1al <br><br>
+            <a href="https://medium.com/resethacker/introduction-to-the-x86-architecture-275a939f8859" target="_blank">Introduction to the x86 architecture</a> : Gaurav yadav <br><br>
+            <a href="https://nassimchami.medium.com/1st-bug-bounty-writeup-open-redirect-to-xss-on-login-page-313221da2879" target="_blank">1st Bug Bounty WriteUp: Open Redirect To XSS on Login Page</a> : Nassim Chami <br><br>
+            <a href="https://gowtham-naidu.medium.com/500-bug-sensitive-data-exposure-to-broken-access-control-leads-how-i-able-to-take-over-any-33658f16e265" target="_blank">500$ Bug: Sensitive Data Exposure to Broken Access Control leads, How I able to take over any account of India’s Biggest College Ever.👨‍💻</a> : Gowtham_Naidu <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
