--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="https://blog.adityadindi.me" target="_blank">BLOG</a>
+            <a class="nav-link" href="https://writeups.adityadindi.me" target="_blank">Writeups</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/WebPages/daily-2022.html" target="_blank">DAILY</a>
