--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -780,6 +780,24 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 29: Jan 29 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/@TutorialBoy24/a-summary-of-oauth-2-0-attack-methods-36834805c631" target="_blank">A Summary of OAuth 2.0 Attack Methods</a> : TutorialBoy <br><br>
+            <a href="https://nafish.medium.com/setting-up-a-free-vps-for-bug-bounty-more-76890bede56" target="_blank">Setting up a Free VPS for Bug Bounty & More</a> : Nafish Alam <br><br>
+            <a href="https://systemweakness.com/sql-injection-important-things-you-need-to-know-right-now-b173cdea0610" target="_blank">SQL INJECTION: IMPORTANT THINGS YOU NEED TO KNOW RIGHT NOW!</a> : Sudarshan Sangameswaran <br><br>
+            <a href="https://medium.com/@niveet/how-to-hack-any-website-part-1-7af873860737" target="_blank">How To Hack Any Website [ Part — 1]</a> : Niveet Palan <br><br>
+            <a href="https://aaryanapex.medium.com/bug-bounty-methodology-web-vulnerabilities-checklist-86175dd29987" target="_blank">Bug Bounty Methodology - Web Vulnerabilities Checklist</a> : Aaryan <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
