--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -784,7 +784,11 @@
       <p>
         <h5>My Activities</h5>
           <p>
-
+            Security+ <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Stapler</a> : Offensive Security Proving Grounds (Play) <br><br>
+            <a href="https://tryhackme.com/room/lunizzctfnd" target="_blank">Lunizz CTF</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/introtopwntools" target="_blank">Intro to Pwntools</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/machines/314" target="_blank">ScriptKiddie</a> : HackTheBox <br><br>
           </p>
         <br><br> 
         <h5>Blogs Reads</h5>
