--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -780,7 +780,7 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 29: Jan 29 2022</h3><br>
+      <h3>Day 30: Jan 30 2022</h3><br>
       <p>
         <h5>My Activities</h5>
           <p>
@@ -798,6 +798,28 @@
             <a href="https://systemweakness.com/sql-injection-important-things-you-need-to-know-right-now-b173cdea0610" target="_blank">SQL INJECTION: IMPORTANT THINGS YOU NEED TO KNOW RIGHT NOW!</a> : Sudarshan Sangameswaran <br><br>
             <a href="https://medium.com/@niveet/how-to-hack-any-website-part-1-7af873860737" target="_blank">How To Hack Any Website [ Part — 1]</a> : Niveet Palan <br><br>
             <a href="https://aaryanapex.medium.com/bug-bounty-methodology-web-vulnerabilities-checklist-86175dd29987" target="_blank">Bug Bounty Methodology - Web Vulnerabilities Checklist</a> : Aaryan <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 31: Jan 31 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            Security+ <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Revenge</a> : Offensive Security Proving Grounds (Play) <br><br>
+            <a href="https://tryhackme.com/room/revenge" target="_blank">Revenge</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/machines/314" target="_blank">ScriptKiddie</a> : HackTheBox <br><br>
+            <a href="https://app.hackthebox.com/machines/374" target="_blank">Horizontall</a> : HackTheBox <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://systemweakness.com/basics-for-web-security-hacking-4cbc917939a8" target="_blank">BASICS OF WEB SECURITY/HACKING</a> : Sudarshan S <br><br>
+            <a href="https://takshil-patil529.medium.com/beginner-bug-bounty-guide-365e4c00d730" target="_blank">Beginner Bug Bounty Guide - Part 1</a> : Takshil Patil <br><br>
+            <a href="https://infosecwriteups.com/how-hackers-are-changing-lives-4659a834cb8b" target="_blank">HOW HACKERS ARE CHANGING LIVES</a> : Dheeraj Madhukar <br><br>
+            <a href="https://medium.com/@priyanshbansal25/unauthenticated-cache-purge-c56fac8569e8" target="_blank">Unauthenticated Cache Purge</a> : Priyansh Bansal <br><br>
+            <a href="https://securitygoat.medium.com/bug-bounty-bootcamp-ch07-open-redirects-b11d2fe134d5" target="_blank">Bug Bounty Bootcamp — Ch07: Open Redirects</a> : SecurityGOAT <br><br>
           </p>
         <br><br>
       </p>
