--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -43,18 +43,19 @@
               </div>
             </div>
           </li>
-          <!--
           <li>
             <div class="dropdown">
               <button class="dropbtn">February</button>
               <div class="dropdown-content">
                 <a href="#week5">Week 5</a>
+                <!--
                 <a href="#week6">Link 6</a>
                 <a href="#week7">Link 7</a>
+                <a href="#week7">Link 8</a>
+                -->
               </div>
             </div>
           </li>
-          -->
         </ul>
       </div>
     </div>
@@ -820,6 +821,29 @@
             <a href="https://infosecwriteups.com/how-hackers-are-changing-lives-4659a834cb8b" target="_blank">HOW HACKERS ARE CHANGING LIVES</a> : Dheeraj Madhukar <br><br>
             <a href="https://medium.com/@priyanshbansal25/unauthenticated-cache-purge-c56fac8569e8" target="_blank">Unauthenticated Cache Purge</a> : Priyansh Bansal <br><br>
             <a href="https://securitygoat.medium.com/bug-bounty-bootcamp-ch07-open-redirects-b11d2fe134d5" target="_blank">Bug Bounty Bootcamp — Ch07: Open Redirects</a> : SecurityGOAT <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <br><br>
+      <h2 id="week5">Week 5</h2> <br><br><br>
+      <h3>Day 32: Feb 1 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/machines/192">Writeup</a> : HackTheBox <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Tre</a> : Offensive Security Proving Grounds (Play) <br><br>
+            <a href="https://tryhackme.com/room/battery" target="_blank">battery</a> : TryHackMe <br><br>
+            CCDC Meeting <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://systemweakness.com/rig-exploitation-kit-infection-malware-traffic-analysis-70fd1b430fdc" target="_blank">Rig Exploitation Kit Infection — Malware Traffic Analysis</a> : Hacktivities <br><br>
+            <a href="https://infosecwriteups.com/steganography-ctfs-73f7b310b1f7" target="_blank">Understanding Steganography for Capture The Flag Challenges</a> : hac# <br><br>
+            <a href="https://medium.com/@arthbajpai277/2fa-bypass-by-changing-request-method-to-delete-500fd0ed12b8" target="_blank">2fa Bypass by changing Request method</a> : Arth Bajpai <br><br>
+            <a href="https://infosecwriteups.com/unauthenticated-access-to-mongodb-database-of-oracle-corporation-d825c271267a" target="_blank">Unauthenticated Access To MongoDB Database of Oracle Corporation</a> : Pratikkhalane <br><br>
+            <a href="https://medium.com/@9899akashgaikwad/everything-about-my-1st-bounty-f430929efc70" target="_blank">Everything about my 1st Bounty.</a> : Akash Gaikwad <br><br>
           </p>
         <br><br>
       </p>
