--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -831,7 +831,7 @@
       <p>
         <h5>My Activities</h5>
           <p>
-            <a href="https://app.hackthebox.com/machines/192">Writeup</a> : HackTheBox <br><br>
+            <a href="https://app.hackthebox.com/machines/192" target="_blank">Writeup</a> : HackTheBox <br><br>
             <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Tre</a> : Offensive Security Proving Grounds (Play) <br><br>
             <a href="https://tryhackme.com/room/battery" target="_blank">battery</a> : TryHackMe <br><br>
             CCDC Meeting <br><br>
@@ -844,6 +844,48 @@
             <a href="https://medium.com/@arthbajpai277/2fa-bypass-by-changing-request-method-to-delete-500fd0ed12b8" target="_blank">2fa Bypass by changing Request method</a> : Arth Bajpai <br><br>
             <a href="https://infosecwriteups.com/unauthenticated-access-to-mongodb-database-of-oracle-corporation-d825c271267a" target="_blank">Unauthenticated Access To MongoDB Database of Oracle Corporation</a> : Pratikkhalane <br><br>
             <a href="https://medium.com/@9899akashgaikwad/everything-about-my-1st-bounty-f430929efc70" target="_blank">Everything about my 1st Bounty.</a> : Akash Gaikwad <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 33: Feb 2 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/cooctusadventures" target="_blank">Cooctus Stories</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/machines/9" target="_blank">Arctic</a> : HackTheBox <br><br>
+            <a href="https://app.hackthebox.com/machines/108" target="_blank">Shocker</a> : HackTheBox <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Tre</a> : Offensive Security Proving Grounds (Play) <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://infosecwriteups.com/how-i-exposed-the-teachers-aadhaar-card-bank-details-in-the-college-website-3e8d44446378" target="_blank">How I exposed the teacher’s Aadhaar card, bank details on the college website.</a> : Ramalingasamy <br><br>
+            <a href="https://infosecwriteups.com/the-story-of-a-rce-on-a-java-web-application-2e400cddcd1e" target="_blank">The Story of an RCE on a Java Web Application</a> : LIL NIX <br><br>
+            <a href="https://takshil-patil529.medium.com/beginner-bug-bounty-guide-part-3-8b979d0f6511" target="_blank">Beginner Bug Bounty Guide - Part 3</a> : Takshil Patil <br><br>
+            <a href="https://raghavendrap120.medium.com/ssl-enumeration-8ee0031b0531" target="_blank">SSL Enumeration</a> Raghav <br><br> 
+            <a href="https://krishnadevpmelevila.medium.com/how-i-hacked-kerala-road-transport-corporation-ksrtc-b5c572c8e769" target="_blank">How I Hacked Kerala Road Transport Corporation(KSRTC)?</a> : Krishnadev P Melevila <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 34: Feb 3 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://www.udemy.com/course/security-601-exams/" target="_blank">Security+</a> : Jason Dion <br><br> 
+            <a href="https://tryhackme.com/room/metamorphosis" target="_blank">Metamorphosis</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/machines/212" target="_blank">Forest</a> : HackTheBox <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">HAWordy</a> : Offensive Security Proving Grounds (Play) <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://remonsec.medium.com/my-experience-of-hacking-dutch-government-3ef35cdecb08" target="_blank">My Experience of Hacking Dutch Government</a> : Mehedi Hasan Remon <br><br>
+            <a href="https://sanyamchawla1999.medium.com/my-experience-of-hacking-the-dutch-government-8c219c61c795" target="_blank">My experience of Hacking The Dutch Government</a> : Sanyam Chawla (Phenomenal) <br><br>
+            <a href="https://darshan-jogi.medium.com/password-spraying-attack-7d8b41ca3a03" target="_blank">Password Spraying Attack 🚿</a> : Darshan Jogi <br><br>
+            <a href="https://corneacristian.medium.com/osint-tips-for-penetration-testing-67bd5a40e2ea" target="_blank">OSINT Tips for Penetration Testing</a> : Cristian Cornea <br><br>
+            <a href="https://infosecwriteups.com/day-15-all-about-burp-suite-100daysofhacking-7d6ae2481c70" target="_blank">Day 15, All About Burp Suite #100DaysofHacking</a> Ayush Verma <br><br>
           </p>
         <br><br>
       </p>
