--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -890,6 +890,29 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 35: Feb 4 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            Security+ <br><br>
+            <a href="https://tryhackme.com/room/zeno" target="_blank">Zeno</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/machines/212" target="_blank">Forest</a> : HackTheBox <br><br>
+            <a href="https://app.hackthebox.com/machines/177" target="_blank">Netmon</a> : HackTheBox <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Y0usef</a> : Offensive Security Proving Grounds (Play) <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/@Hackfreaksofficial/what-is-google-dorks-use-google-search-like-a-pro-in-2022-8a7c69111da3" target="_blank">What is Google Dorks? Use google Search Like A PRO IN 2022.</a> : Hackfreaksofficial <br><br>
+            <a href="https://medium.com/@damaidec/idor-vulnerability-on-invoice-and-weak-password-reset-leads-to-account-take-over-603b42143a8c" target="_blank">IDOR vulnerability on invoice and weak password reset leads to account take over</a> : Damaidec <br><br>
+            <a href="https://clonewriter.medium.com/dvwa-high-xsss-vulnerability-testing-be2583dd82fd" target="_blank">DVWA : HIGH XSS’s VULNERABILITY TESTING</a> : clonewriter <br><br>
+            <a href="https://systemweakness.com/testing-for-local-file-inclusion-vulnerability-part-1-1d5dd0bc35d" target="_blank">Testing for Local File Inclusion Vulnerability-Part 1</a> : Mysticscripter <br><br>
+            <a href="https://amakki.me/stored-xss-by-bypassing-signature-61ebd83ece6" target="_blank">Stored XSS by bypassing signature</a> : Abdulrahman Makki | عبدالرحمن مكي <br><br>
+            <a href="https://medium.com/@turkishhoodie010/windows-poisoning-hacking-and-preventing-ac45969b7c65" target="_blank">Windows Poisoning(hacking and preventing)</a> : Ahmet Göker <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
