--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
       <small class="text-muted lead"><strong><a href="https://hackersarcade.medium.com/noobs-guide-to-web-application-penetration-testing-e3ae921d57d1" class="text-decoration-none" target="_blank">Web Application Hacking Guide</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="/" class="text-decoration-none" target="_blank">Personal Website</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="/WebPages/daily-2021.html" class="text-decoration-none" target="_blank">Daily Hacking Challenge 2021 / Daily Hacking Guide (Resources)</a></strong></small> <br><br>
+      <small class="text-muted lead"><strong><a href="https://writeups.adityadindi.me" class="text-decoration-none" target="_blank">Capture The Flag Writeups</strong></a></small> <br><br>
+      <small class="text-muted lead"><strong><a href="https://github.com/Pyrus369/CyberSecurityProjects" class="text-decoration-none" target="_blank">CyberSecurity Projects using Python</strong></a></small> <br><br>
+      <small class="text-muted lead"><strong><a href="https://github.com/Pyrus369/Python-Programming" class="text-decoration-none" target="_blank">Python Programming</strong></a></small> <br><br>
       <br>
       <hr>
       <br>
