--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -913,6 +913,24 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 36: Feb 5 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://infosecwriteups.com/day-17-web-reconnaissance-or-information-gathering-part-2-100daysofhacking-323ecea7f0a3" target="_blank">Day 17, Web Reconnaissance Or Information Gathering — Part 2#100DaysofHacking</a> : Ayush Verma <br><br>
+            <a href="https://medium.com/@xstag0/bypassing-2fa-with-cookies-ff2c79022f63" target="_blank">Bypassing 2FA With Cookies!</a> : Xstag0 <br><br>
+            <a href="https://medium.com/geekculture/pass-the-hash-attack-f732f8de3e9a" target="_blank">Pass the Hash Attack</a> : Security Lit Limited <br><br>
+            <a href="https://xcheater.medium.com/all-about-csrf-flaw-7d525be39587" target="_blank">All About CSRF Flaw</a> : Xcheater <br><br>
+            <a href="https://mafiaguy.medium.com/how-to-exploit-pwnkit-cve-2021-4034-72e99e593f6a" target="_blank">How to Exploit Pwnkit: CVE-2021–4034?</a> : Siddhanth Dwivedi <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
