--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -917,7 +917,11 @@
       <p>
         <h5>My Activities</h5>
           <p>
-
+            Security+ <br><br>
+            <a href="https://tryhackme.com/room/0day" target="_blank">0day</a> : TryHackMe <br><br>
+            <a href=https://tryhackme.com/room/dearqa" target="_blank">Dear QA</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/machines/177" target="_blank">Netmon</a> : HackTheBox <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Y0usef</a> : Offensive Security Proving Grounds (Play) <br><br>
           </p>
         <br><br> 
         <h5>Blogs Reads</h5>
