--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -940,6 +940,30 @@
         Break Day <br><br>
       </p>
       <br><br>
+      <h3>Day 38: Feb 7 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            Security+ <br><br>
+            <a href="https://app.hackthebox.com/tracks/Beginner-Track" target="_blank">Beginner Track</a> : HackTheBox <br><br>
+            <a href="https://tryhackme.com/room/hamlet" target="_blank">Hamlet</a> : TryHackMe <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Pwned1</a> : Offensive Security Proving Grounds (Play) <br><br>
+            <a href="https://app.hackthebox.com/machines/201" target="_blank">Heist</a> : HackTheBox <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://anmolksachan.medium.com/the-time-machine-weaponizing-waybackurls-for-recon-bugbounties-osint-sensitive-endpoints-and-40889a03feeb" target="_blank">The Time Machine — Weaponizing WaybackUrls for Recon, BugBounties , OSINT, Sensitive Endpoints and what not</a> : Anmol K Sachan <br><br>
+            <a href="https://tcm-sec.com/so-you-want-to-be-a-hacker-2022-edition/" target="_blank">So You Want To Be A Hacker: 2022 Edition</a> : TCM Security <br><br>
+            <a href="https://infosecwriteups.com/sony-hunting-i-discovering-hidden-parameters-5x-swag-c3396c0064bc" target="_blank">SONY Hunting I: Discovering Hidden Parameters (5x SWAG)</a> : can1337 <br><br>
+            <a href="https://mr23r0.medium.com/i-hacked-every-single-staff-account-on-airindia-within-1-5-minutes-f0c96b01efab" target="_blank">I Hacked Every Single Staff Account on AirIndia within 1.5 Minutes :)</a> : Saransh Saraf aka (MR23R0) <br><br>
+            <a href="https://shellbr3ak.medium.com/first-time-hacking-the-cloud-205751a4c61" target="_blank">First Time Hacking The Cloud</a> : Shellbr3ak <br><br>
+            <a href="https://radianid.medium.com/how-i-was-able-to-buy-a-product-for-free-e91516409ffc" target="_blank">How I was able to buy a product for free — $$$</a> : Radian ID <br><br>
+            <a href="https://janjeffrie.medium.com/otp-bypass-via-response-manipulation-ab17f5985c8" target="_blank">OTP bypass via response manipulation</a> : Jan Jeffrie Salloman <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
