--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -964,6 +964,27 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 38: Feb 7 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            Security+ <br><br>
+            <a href="https://tryhackme.com/room/redteamfundamentals" target="_blank">Red Team Fundamentals</a> : TryHackMe <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">BTRSys2.1</a> : Offensive Security Proving Grounds (Play) <br><br>
+            <a href="https://app.hackthebox.com/machines/64" target="_blank">Mirai</a> : HackTheBox <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/@anmolbagul20/mutation-xss-a6c048ad65fd" target="_blank">Mutation XSS</a> : Anmol Bagul <br><br>
+            <a href="https://medium.com/geekculture/unvalidated-redirects-and-forwards-c7b733bfec9e" target="_blank">Unvalidated Redirects and Forwards</a> : Security Lit Limited <br><br>
+            <a href="https://infosecwithsatyam.medium.com/microsoft-teams-information-disclosure-dfd66b125b72" target="blank">Microsoft Teams Information Disclosure</a> Satyam Singh <br><br>
+            <a href="https://mr23r0.medium.com/how-i-find-my-first-critical-bug-worth-2500-5000-7eb2c1c5d6d7" target="_blank">How I find My first Critical Bug Worth $2500–5000</a> : Saransh Saraf aka (MR23R0) <br><br>
+            <a href="https://vivek-ghinaiya.medium.com/idor-with-autorize-929c4f6a3734" target="_blank">IDOR with Autorize!</a> : Vivek Ghinaiya <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
