--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -48,8 +48,8 @@
               <button class="dropbtn">February</button>
               <div class="dropdown-content">
                 <a href="#week5">Week 5</a>
+                <a href="#week6">Week 6</a>
                 <!--
-                <a href="#week6">Link 6</a>
                 <a href="#week7">Link 7</a>
                 <a href="#week7">Link 8</a>
                 -->
@@ -964,14 +964,15 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 38: Feb 7 2022</h3><br>
+      <h2 id="week6">Week 6</h2> <br><br><br>
+      <h3>Day 39: Feb 8 2022</h3><br>
       <p>
         <h5>My Activities</h5>
           <p>
             Security+ <br><br>
             <a href="https://tryhackme.com/room/redteamfundamentals" target="_blank">Red Team Fundamentals</a> : TryHackMe <br><br>
             <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">BTRSys2.1</a> : Offensive Security Proving Grounds (Play) <br><br>
-            <a href="https://app.hackthebox.com/machines/64" target="_blank">Mirai</a> : HackTheBox <br><br>
+            <a href="https://app.hackthebox.com/machines/222" target="_blank">OpenAdmin</a> : HackTheBox <br><br>
           </p>
         <br><br> 
         <h5>Blogs Reads</h5>
@@ -981,6 +982,27 @@
             <a href="https://infosecwithsatyam.medium.com/microsoft-teams-information-disclosure-dfd66b125b72" target="blank">Microsoft Teams Information Disclosure</a> Satyam Singh <br><br>
             <a href="https://mr23r0.medium.com/how-i-find-my-first-critical-bug-worth-2500-5000-7eb2c1c5d6d7" target="_blank">How I find My first Critical Bug Worth $2500–5000</a> : Saransh Saraf aka (MR23R0) <br><br>
             <a href="https://vivek-ghinaiya.medium.com/idor-with-autorize-929c4f6a3734" target="_blank">IDOR with Autorize!</a> : Vivek Ghinaiya <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 41: Feb 9 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/investigatingwindows" target="_blank">Investiation Windows</a> : TryHackMe <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">My-CMSMS</a> : Offensive Security Proving Grounds (Play) <br><br>
+            <a href="https://app.hackthebox.com/machines/64" target="_blank">Mirai</a> : HackTheBox <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://debprasadbanerjee502.medium.com/what-ive-learned-from-hunting-bugs-for-2-months-dd982010347e" target="_blank">What I’ve learned from hunting bugs for 2 months?</a> : Debprasad Banerjee <br><br>
+            <a href="https://debprasadbanerjee502.medium.com/why-do-you-suck-at-hacking-underrated-bbfa245c0e33" target="_blank">Why do you suck at hacking? (Underrated)</a> : Debprasad Banerjee <br><br>
+            <a href="https://debprasadbanerjee502.medium.com/how-i-hacked-iit-k-41653cc2fec4" target="_blank">How I hacked IIT(K)</a> : Debprasad Banerjee <br><br>
+            <a href="https://medium.com/@raymond-lind/how-i-found-a-simple-stored-xss-a2976c5251b" target="_blank">How I Found A Simple Stored XSS</a> : How I Found A Simple Stored XSS <br><br>
+            <a href="https://medium.com/codex/bypass-file-upload-restrictions-f30c88e1fccb" target="_blank">Bypass File Upload Restrictions</a> : Surendra Choudhury <br><br>
+            <a href="https://infosecwriteups.com/day-20-web-reconnaissance-or-information-gathering-part-5-100daysofhacking-5392d48233db" target="_blank">Day 20, Web Reconnaissance Or Information Gathering — Part 5#100DaysofHacking</a> Ayush Verma <br><br>
           </p>
         <br><br>
       </p>
